--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.13.1",
     "express-session": "^1.14.1",
     "jade": "~1.11.0",
+    "markdown": "^0.5.0",
     "mongodb": "^2.2.9",
     "morgan": "~1.6.1",
     "node-sass-middleware": "0.8.0",
